fixtures/benchmark/negatives/n05.ts
const testDescription = "gemini-2.5-flash";
